# distribution

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS
channels/: beta.json  nightly.json  stable.json
examples/: manifest.example.json  release-spec.example.json
pages/: index.html
release-notes/: v0.0.1-beta.1.md  v0.0.1-beta.10.md  v0.0.1-beta.11.md  v0.0.1-beta.12.md  v0.0.1-beta.13.md  v0.0.1-beta.14.md  v0.0.1-beta.15.md  v0.0.1-beta.16.md  v0.0.1-beta.2.md  v0.0.1-beta.3.md  v0.0.1-beta.4.md  v0.0.1-beta.5.md  v0.0.1-beta.6.md  v0.0.1-beta.7.md  v0.0.1-beta.8.md  v0.0.1-beta.9.md  v0.1.0-beta.1.md  v0.1.0-beta.2.md  v0.1.0-beta.3.md
release-specs/: nightly.template.json  v0.0.0-test.1.json  v0.0.0-test.2.json  v0.0.0-test.3.json  v0.0.1-beta.1.json  v0.0.1-beta.10.json  v0.0.1-beta.11.json  v0.0.1-beta.12.json  v0.0.1-beta.13.json  v0.0.1-beta.14.json  v0.0.1-beta.15.json  v0.0.1-beta.16.json  v0.0.1-beta.2.json  v0.0.1-beta.3.json  v0.0.1-beta.4.json  v0.0.1-beta.5.json  v0.0.1-beta.6.json  v0.0.1-beta.7.json  v0.0.1-beta.8.json  v0.0.1-beta.9.json  v0.1.0-beta.1.json  v0.1.0-beta.2.json  v0.1.0-beta.3.json
schemas/: channel-pointer.schema.json  manifest.schema.json  release-spec.schema.json
scripts/: build_manifest.py  build_manifest_with_reuse.py  package_bundle.py  select_latest_green.py  update_channel_pointer.py  validate_dist.py  verify_manifest_assets.py
tests/: test_build_manifest.py  (+4 more)
tools/ms-dist-manifest/: Cargo.toml
tools/ms-dist-manifest/src/: lib.rs  main.rs
tools/ms-dist-manifest/tests/: sign_verify.rs
(+9 files in other folders)
